parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    COMMENT
    RQUOTE
    COLON
    NEWLINE
    LQUOTE
    NOT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI gotomain program1
Rule 2     program -> PROGRAM ID SEMI gotomain var program1
Rule 3     gotomain -> empty
Rule 4     program1 -> function program1
Rule 5     program1 -> function
Rule 6     function -> type FUNCTION ID pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
Rule 7     function -> type FUNCTION ID pushid setcontext LPAREN RPAREN savefunc block endfunc
Rule 8     setcontext -> empty
Rule 9     endfunc -> empty
Rule 10    savefunc -> empty
Rule 11    parameter -> type ID pushid
Rule 12    parameter -> type ID pushid COMMA parameter
Rule 13    block -> LBRACE var vartoparam statements RBRACE deletelocal
Rule 14    block -> LBRACE var vartoparam RBRACE deletelocal
Rule 15    deletelocal -> empty
Rule 16    vartoparam -> empty
Rule 17    block -> LBRACE statements RBRACE
Rule 18    block -> LBRACE RBRACE
Rule 19    simpleblock -> LBRACE statements RBRACE
Rule 20    simpleblock -> LBRACE RBRACE
Rule 21    savereturn -> empty
Rule 22    statements -> statement
Rule 23    statements -> statement statements
Rule 24    statement -> condition
Rule 25    statement -> assignment
Rule 26    statement -> while
Rule 27    statement -> for
Rule 28    statement -> dowhile
Rule 29    statement -> print SEMI
Rule 30    statement -> funcall SEMI
Rule 31    statement -> return SEMI
Rule 32    statement -> input SEMI
Rule 33    input -> INPUT ID pushdeclaredid
Rule 34    return -> RETURN expression savereturn
Rule 35    return -> RETURN savereturn
Rule 36    print -> PRINT expression
Rule 37    funcall -> CALL ID pushid LPAREN eragener startcount exparam RPAREN assignvalues
Rule 38    funcall -> CALL ID pushid LPAREN eragener RPAREN assignvalues
Rule 39    eragener -> empty
Rule 40    startcount -> empty
Rule 41    updatecount -> empty
Rule 42    exparam -> expression updatecount
Rule 43    exparam -> expression updatecount COMMA exparam
Rule 44    assignvalues -> empty
Rule 45    for -> LPAREN assignment expression SEMI expression RPAREN simpleblock
Rule 46    dowhile -> DO pushjump simpleblock WHILE LPAREN expression RPAREN gotot
Rule 47    pushjump -> empty
Rule 48    gotot -> empty
Rule 49    while -> WHILE pushjump LPAREN expression RPAREN gotof simpleblock gotowhile
Rule 50    gotowhile -> empty
Rule 51    condition -> IF LPAREN expression RPAREN gotof simpleblock ELSE gotoif simpleblock updatejump
Rule 52    condition -> IF LPAREN expression RPAREN gotof simpleblock updatejump
Rule 53    gotoif -> empty
Rule 54    gotof -> empty
Rule 55    updatejump -> empty
Rule 56    var -> VAR type var1 SEMI var
Rule 57    var -> VAR type var1 SEMI
Rule 58    var1 -> ID pushid savevar allocatevar
Rule 59    var1 -> ID pushid savevar allocatevar COMMA var1
Rule 60    var1 -> ID pushid savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar COMMA var1
Rule 61    var1 -> ID pushid savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar
Rule 62    settypeint -> empty
Rule 63    settypedec -> empty
Rule 64    settypefrac -> empty
Rule 65    settypestring -> empty
Rule 66    settypebool -> empty
Rule 67    settypevoid -> empty
Rule 68    savevar -> empty
Rule 69    allocatevar -> empty
Rule 70    updatesize -> empty
Rule 71    type -> BOOLEAN settypebool
Rule 72    type -> INTEGER settypeint
Rule 73    type -> DECIMAL settypedec
Rule 74    type -> STRING settypestring
Rule 75    type -> FRACTION settypefrac
Rule 76    type -> VOID settypevoid
Rule 77    assignment -> ID pushid EQUALS expression SEMI updatevar
Rule 78    assignment -> ID pushid LBRACK expression RBRACK EQUALS expression SEMI updatecell
Rule 79    updatecell -> empty
Rule 80    updatevar -> empty
Rule 81    expression -> exp
Rule 82    exp -> exp OR exp
Rule 83    exp -> exp AND exp
Rule 84    exp -> exp SAME exp
Rule 85    exp -> exp DIF exp
Rule 86    exp -> exp GE exp
Rule 87    exp -> exp LE exp
Rule 88    exp -> exp NE exp
Rule 89    exp -> exp GT exp
Rule 90    exp -> exp LT exp
Rule 91    exp -> exp PLUS exp
Rule 92    exp -> exp MINUS exp
Rule 93    exp -> exp MODULO exp
Rule 94    exp -> exp DIVIDE exp
Rule 95    exp -> exp TIMES exp
Rule 96    exp -> exp POWER exp
Rule 97    exp -> ID pushdeclaredid
Rule 98    exp -> ID pushdeclaredid LBRACK expression RBRACK pushdeclaredarray
Rule 99    exp -> LBRACK exp RBRACK
Rule 100   exp -> INTEGER_CONS settypeint pushcons
Rule 101   exp -> STRING_CONS settypestring pushcons
Rule 102   exp -> FRACTION_CONS settypefrac pushcons
Rule 103   exp -> DECIMAL_CONS settypedec pushcons
Rule 104   exp -> TRUE settypebool pushcons
Rule 105   exp -> FALSE settypebool pushcons
Rule 106   exp -> EXMARK exp
Rule 107   exp -> LPAREN exp RPAREN
Rule 108   exp -> funcall pushrtn
Rule 109   pushrtn -> empty
Rule 110   pushtype -> empty
Rule 111   pushid -> pushtype
Rule 112   pushdeclaredid -> pushtype
Rule 113   pushdeclaredarray -> pushtype
Rule 114   pushcons -> pushtype
Rule 115   empty -> <empty>

Terminals, with rules where they appear

AND                  : 83
BOOLEAN              : 71
CALL                 : 37 38
COLON                : 
COMMA                : 12 43 59 60
COMMENT              : 
DECIMAL              : 73
DECIMAL_CONS         : 103
DIF                  : 85
DIVIDE               : 94
DO                   : 46
ELSE                 : 51
EQUALS               : 77 78
EXMARK               : 106
FALSE                : 105
FOR                  : 
FRACTION             : 75
FRACTION_CONS        : 102
FUNCTION             : 6 7
GE                   : 86
GT                   : 89
ID                   : 1 2 6 7 11 12 33 37 38 58 59 60 61 77 78 97 98
IF                   : 51 52
INPUT                : 33
INTEGER              : 72
INTEGER_CONS         : 60 61 100
LBRACE               : 13 14 17 18 19 20
LBRACK               : 60 61 78 98 99
LE                   : 87
LPAREN               : 6 7 37 38 45 46 49 51 52 107
LQUOTE               : 
LT                   : 90
MINUS                : 92
MODULO               : 93
NE                   : 88
NEWLINE              : 
NOT                  : 
OR                   : 82
PLUS                 : 91
POWER                : 96
PRINT                : 36
PROGRAM              : 1 2
RBRACE               : 13 14 17 18 19 20
RBRACK               : 60 61 78 98 99
RETURN               : 34 35
RPAREN               : 6 7 37 38 45 46 49 51 52 107
RQUOTE               : 
SAME                 : 84
SEMI                 : 1 2 29 30 31 32 45 56 57 77 78
STRING               : 74
STRING_CONS          : 101
TIMES                : 95
TRUE                 : 104
VAR                  : 56 57
VOID                 : 76
WHILE                : 46 49
error                : 

Nonterminals, with rules where they appear

allocatevar          : 58 59 60 61
assignment           : 25 45
assignvalues         : 37 38
block                : 6 7
condition            : 24
deletelocal          : 13 14
dowhile              : 28
empty                : 3 8 9 10 15 16 21 39 40 41 44 47 48 50 53 54 55 62 63 64 65 66 67 68 69 70 79 80 109 110
endfunc              : 6 7
eragener             : 37 38
exp                  : 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 99 106 107
exparam              : 37 43
expression           : 34 36 42 43 45 45 46 49 51 52 77 78 78 98
for                  : 27
funcall              : 30 108
function             : 4 5
gotof                : 49 51 52
gotoif               : 51
gotomain             : 1 2
gotot                : 46
gotowhile            : 49
input                : 32
parameter            : 6 12
print                : 29
program              : 0
program1             : 1 2 4
pushcons             : 100 101 102 103 104 105
pushdeclaredarray    : 98
pushdeclaredid       : 33 97 98
pushid               : 6 7 11 12 37 38 58 59 60 61 77 78
pushjump             : 46 49
pushrtn              : 108
pushtype             : 111 112 113 114
return               : 31
savefunc             : 6 7
savereturn           : 34 35
savevar              : 58 59 60 61
setcontext           : 6 7
settypebool          : 71 104 105
settypedec           : 73 103
settypefrac          : 75 102
settypeint           : 72 100
settypestring        : 74 101
settypevoid          : 76
simpleblock          : 45 46 49 51 51 52
startcount           : 37
statement            : 22 23
statements           : 13 17 19 23
type                 : 6 7 11 12 56 57
updatecell           : 78
updatecount          : 42 43
updatejump           : 51 52
updatesize           : 60 61
updatevar            : 77
var                  : 2 13 14 56
var1                 : 56 57 59 60
vartoparam           : 13 14
while                : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI gotomain program1
    (2) program -> . PROGRAM ID SEMI gotomain var program1

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . ID SEMI gotomain program1
    (2) program -> PROGRAM . ID SEMI gotomain var program1

    ID              shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> PROGRAM ID . SEMI gotomain program1
    (2) program -> PROGRAM ID . SEMI gotomain var program1

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . gotomain program1
    (2) program -> PROGRAM ID SEMI . gotomain var program1
    (3) gotomain -> . empty
    (115) empty -> .

    VAR             reduce using rule 115 (empty -> .)
    BOOLEAN         reduce using rule 115 (empty -> .)
    INTEGER         reduce using rule 115 (empty -> .)
    DECIMAL         reduce using rule 115 (empty -> .)
    STRING          reduce using rule 115 (empty -> .)
    FRACTION        reduce using rule 115 (empty -> .)
    VOID            reduce using rule 115 (empty -> .)

    gotomain                       shift and go to state 6
    empty                          shift and go to state 5

state 5

    (3) gotomain -> empty .

    VAR             reduce using rule 3 (gotomain -> empty .)
    BOOLEAN         reduce using rule 3 (gotomain -> empty .)
    INTEGER         reduce using rule 3 (gotomain -> empty .)
    DECIMAL         reduce using rule 3 (gotomain -> empty .)
    STRING          reduce using rule 3 (gotomain -> empty .)
    FRACTION        reduce using rule 3 (gotomain -> empty .)
    VOID            reduce using rule 3 (gotomain -> empty .)


state 6

    (1) program -> PROGRAM ID SEMI gotomain . program1
    (2) program -> PROGRAM ID SEMI gotomain . var program1
    (4) program1 -> . function program1
    (5) program1 -> . function
    (56) var -> . VAR type var1 SEMI var
    (57) var -> . VAR type var1 SEMI
    (6) function -> . type FUNCTION ID pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> . type FUNCTION ID pushid setcontext LPAREN RPAREN savefunc block endfunc
    (71) type -> . BOOLEAN settypebool
    (72) type -> . INTEGER settypeint
    (73) type -> . DECIMAL settypedec
    (74) type -> . STRING settypestring
    (75) type -> . FRACTION settypefrac
    (76) type -> . VOID settypevoid

    VAR             shift and go to state 11
    BOOLEAN         shift and go to state 14
    INTEGER         shift and go to state 9
    DECIMAL         shift and go to state 7
    STRING          shift and go to state 16
    FRACTION        shift and go to state 10
    VOID            shift and go to state 15

    program1                       shift and go to state 12
    type                           shift and go to state 13
    function                       shift and go to state 8
    var                            shift and go to state 17

state 7

    (73) type -> DECIMAL . settypedec
    (63) settypedec -> . empty
    (115) empty -> .

    FUNCTION        reduce using rule 115 (empty -> .)
    ID              reduce using rule 115 (empty -> .)

    settypedec                     shift and go to state 18
    empty                          shift and go to state 19

state 8

    (4) program1 -> function . program1
    (5) program1 -> function .
    (4) program1 -> . function program1
    (5) program1 -> . function
    (6) function -> . type FUNCTION ID pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> . type FUNCTION ID pushid setcontext LPAREN RPAREN savefunc block endfunc
    (71) type -> . BOOLEAN settypebool
    (72) type -> . INTEGER settypeint
    (73) type -> . DECIMAL settypedec
    (74) type -> . STRING settypestring
    (75) type -> . FRACTION settypefrac
    (76) type -> . VOID settypevoid

    $end            reduce using rule 5 (program1 -> function .)
    BOOLEAN         shift and go to state 14
    INTEGER         shift and go to state 9
    DECIMAL         shift and go to state 7
    STRING          shift and go to state 16
    FRACTION        shift and go to state 10
    VOID            shift and go to state 15

    program1                       shift and go to state 20
    type                           shift and go to state 13
    function                       shift and go to state 8

state 9

    (72) type -> INTEGER . settypeint
    (62) settypeint -> . empty
    (115) empty -> .

    FUNCTION        reduce using rule 115 (empty -> .)
    ID              reduce using rule 115 (empty -> .)

    settypeint                     shift and go to state 21
    empty                          shift and go to state 22

state 10

    (75) type -> FRACTION . settypefrac
    (64) settypefrac -> . empty
    (115) empty -> .

    FUNCTION        reduce using rule 115 (empty -> .)
    ID              reduce using rule 115 (empty -> .)

    settypefrac                    shift and go to state 23
    empty                          shift and go to state 24

state 11

    (56) var -> VAR . type var1 SEMI var
    (57) var -> VAR . type var1 SEMI
    (71) type -> . BOOLEAN settypebool
    (72) type -> . INTEGER settypeint
    (73) type -> . DECIMAL settypedec
    (74) type -> . STRING settypestring
    (75) type -> . FRACTION settypefrac
    (76) type -> . VOID settypevoid

    BOOLEAN         shift and go to state 14
    INTEGER         shift and go to state 9
    DECIMAL         shift and go to state 7
    STRING          shift and go to state 16
    FRACTION        shift and go to state 10
    VOID            shift and go to state 15

    type                           shift and go to state 25

state 12

    (1) program -> PROGRAM ID SEMI gotomain program1 .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI gotomain program1 .)


state 13

    (6) function -> type . FUNCTION ID pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> type . FUNCTION ID pushid setcontext LPAREN RPAREN savefunc block endfunc

    FUNCTION        shift and go to state 26


state 14

    (71) type -> BOOLEAN . settypebool
    (66) settypebool -> . empty
    (115) empty -> .

    FUNCTION        reduce using rule 115 (empty -> .)
    ID              reduce using rule 115 (empty -> .)

    settypebool                    shift and go to state 27
    empty                          shift and go to state 28

state 15

    (76) type -> VOID . settypevoid
    (67) settypevoid -> . empty
    (115) empty -> .

    FUNCTION        reduce using rule 115 (empty -> .)
    ID              reduce using rule 115 (empty -> .)

    settypevoid                    shift and go to state 29
    empty                          shift and go to state 30

state 16

    (74) type -> STRING . settypestring
    (65) settypestring -> . empty
    (115) empty -> .

    FUNCTION        reduce using rule 115 (empty -> .)
    ID              reduce using rule 115 (empty -> .)

    settypestring                  shift and go to state 31
    empty                          shift and go to state 32

state 17

    (2) program -> PROGRAM ID SEMI gotomain var . program1
    (4) program1 -> . function program1
    (5) program1 -> . function
    (6) function -> . type FUNCTION ID pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> . type FUNCTION ID pushid setcontext LPAREN RPAREN savefunc block endfunc
    (71) type -> . BOOLEAN settypebool
    (72) type -> . INTEGER settypeint
    (73) type -> . DECIMAL settypedec
    (74) type -> . STRING settypestring
    (75) type -> . FRACTION settypefrac
    (76) type -> . VOID settypevoid

    BOOLEAN         shift and go to state 14
    INTEGER         shift and go to state 9
    DECIMAL         shift and go to state 7
    STRING          shift and go to state 16
    FRACTION        shift and go to state 10
    VOID            shift and go to state 15

    program1                       shift and go to state 33
    type                           shift and go to state 13
    function                       shift and go to state 8

state 18

    (73) type -> DECIMAL settypedec .

    ID              reduce using rule 73 (type -> DECIMAL settypedec .)
    FUNCTION        reduce using rule 73 (type -> DECIMAL settypedec .)


state 19

    (63) settypedec -> empty .

    OR              reduce using rule 63 (settypedec -> empty .)
    AND             reduce using rule 63 (settypedec -> empty .)
    SAME            reduce using rule 63 (settypedec -> empty .)
    DIF             reduce using rule 63 (settypedec -> empty .)
    GE              reduce using rule 63 (settypedec -> empty .)
    LE              reduce using rule 63 (settypedec -> empty .)
    NE              reduce using rule 63 (settypedec -> empty .)
    GT              reduce using rule 63 (settypedec -> empty .)
    LT              reduce using rule 63 (settypedec -> empty .)
    PLUS            reduce using rule 63 (settypedec -> empty .)
    MINUS           reduce using rule 63 (settypedec -> empty .)
    MODULO          reduce using rule 63 (settypedec -> empty .)
    DIVIDE          reduce using rule 63 (settypedec -> empty .)
    TIMES           reduce using rule 63 (settypedec -> empty .)
    POWER           reduce using rule 63 (settypedec -> empty .)
    SEMI            reduce using rule 63 (settypedec -> empty .)
    RPAREN          reduce using rule 63 (settypedec -> empty .)
    RBRACK          reduce using rule 63 (settypedec -> empty .)
    COMMA           reduce using rule 63 (settypedec -> empty .)
    FUNCTION        reduce using rule 63 (settypedec -> empty .)
    ID              reduce using rule 63 (settypedec -> empty .)


state 20

    (4) program1 -> function program1 .

    $end            reduce using rule 4 (program1 -> function program1 .)


state 21

    (72) type -> INTEGER settypeint .

    ID              reduce using rule 72 (type -> INTEGER settypeint .)
    FUNCTION        reduce using rule 72 (type -> INTEGER settypeint .)


state 22

    (62) settypeint -> empty .

    OR              reduce using rule 62 (settypeint -> empty .)
    AND             reduce using rule 62 (settypeint -> empty .)
    SAME            reduce using rule 62 (settypeint -> empty .)
    DIF             reduce using rule 62 (settypeint -> empty .)
    GE              reduce using rule 62 (settypeint -> empty .)
    LE              reduce using rule 62 (settypeint -> empty .)
    NE              reduce using rule 62 (settypeint -> empty .)
    GT              reduce using rule 62 (settypeint -> empty .)
    LT              reduce using rule 62 (settypeint -> empty .)
    PLUS            reduce using rule 62 (settypeint -> empty .)
    MINUS           reduce using rule 62 (settypeint -> empty .)
    MODULO          reduce using rule 62 (settypeint -> empty .)
    DIVIDE          reduce using rule 62 (settypeint -> empty .)
    TIMES           reduce using rule 62 (settypeint -> empty .)
    POWER           reduce using rule 62 (settypeint -> empty .)
    SEMI            reduce using rule 62 (settypeint -> empty .)
    RPAREN          reduce using rule 62 (settypeint -> empty .)
    RBRACK          reduce using rule 62 (settypeint -> empty .)
    COMMA           reduce using rule 62 (settypeint -> empty .)
    FUNCTION        reduce using rule 62 (settypeint -> empty .)
    ID              reduce using rule 62 (settypeint -> empty .)


state 23

    (75) type -> FRACTION settypefrac .

    ID              reduce using rule 75 (type -> FRACTION settypefrac .)
    FUNCTION        reduce using rule 75 (type -> FRACTION settypefrac .)


state 24

    (64) settypefrac -> empty .

    FUNCTION        reduce using rule 64 (settypefrac -> empty .)
    ID              reduce using rule 64 (settypefrac -> empty .)
    OR              reduce using rule 64 (settypefrac -> empty .)
    AND             reduce using rule 64 (settypefrac -> empty .)
    SAME            reduce using rule 64 (settypefrac -> empty .)
    DIF             reduce using rule 64 (settypefrac -> empty .)
    GE              reduce using rule 64 (settypefrac -> empty .)
    LE              reduce using rule 64 (settypefrac -> empty .)
    NE              reduce using rule 64 (settypefrac -> empty .)
    GT              reduce using rule 64 (settypefrac -> empty .)
    LT              reduce using rule 64 (settypefrac -> empty .)
    PLUS            reduce using rule 64 (settypefrac -> empty .)
    MINUS           reduce using rule 64 (settypefrac -> empty .)
    MODULO          reduce using rule 64 (settypefrac -> empty .)
    DIVIDE          reduce using rule 64 (settypefrac -> empty .)
    TIMES           reduce using rule 64 (settypefrac -> empty .)
    POWER           reduce using rule 64 (settypefrac -> empty .)
    SEMI            reduce using rule 64 (settypefrac -> empty .)
    RPAREN          reduce using rule 64 (settypefrac -> empty .)
    RBRACK          reduce using rule 64 (settypefrac -> empty .)
    COMMA           reduce using rule 64 (settypefrac -> empty .)


state 25

    (56) var -> VAR type . var1 SEMI var
    (57) var -> VAR type . var1 SEMI
    (58) var1 -> . ID pushid savevar allocatevar
    (59) var1 -> . ID pushid savevar allocatevar COMMA var1
    (60) var1 -> . ID pushid savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar COMMA var1
    (61) var1 -> . ID pushid savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar

    ID              shift and go to state 35

    var1                           shift and go to state 34

state 26

    (6) function -> type FUNCTION . ID pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> type FUNCTION . ID pushid setcontext LPAREN RPAREN savefunc block endfunc

    ID              shift and go to state 36


state 27

    (71) type -> BOOLEAN settypebool .

    ID              reduce using rule 71 (type -> BOOLEAN settypebool .)
    FUNCTION        reduce using rule 71 (type -> BOOLEAN settypebool .)


state 28

    (66) settypebool -> empty .

    OR              reduce using rule 66 (settypebool -> empty .)
    AND             reduce using rule 66 (settypebool -> empty .)
    SAME            reduce using rule 66 (settypebool -> empty .)
    DIF             reduce using rule 66 (settypebool -> empty .)
    GE              reduce using rule 66 (settypebool -> empty .)
    LE              reduce using rule 66 (settypebool -> empty .)
    NE              reduce using rule 66 (settypebool -> empty .)
    GT              reduce using rule 66 (settypebool -> empty .)
    LT              reduce using rule 66 (settypebool -> empty .)
    PLUS            reduce using rule 66 (settypebool -> empty .)
    MINUS           reduce using rule 66 (settypebool -> empty .)
    MODULO          reduce using rule 66 (settypebool -> empty .)
    DIVIDE          reduce using rule 66 (settypebool -> empty .)
    TIMES           reduce using rule 66 (settypebool -> empty .)
    POWER           reduce using rule 66 (settypebool -> empty .)
    SEMI            reduce using rule 66 (settypebool -> empty .)
    RPAREN          reduce using rule 66 (settypebool -> empty .)
    RBRACK          reduce using rule 66 (settypebool -> empty .)
    COMMA           reduce using rule 66 (settypebool -> empty .)
    FUNCTION        reduce using rule 66 (settypebool -> empty .)
    ID              reduce using rule 66 (settypebool -> empty .)


state 29

    (76) type -> VOID settypevoid .

    ID              reduce using rule 76 (type -> VOID settypevoid .)
    FUNCTION        reduce using rule 76 (type -> VOID settypevoid .)


state 30

    (67) settypevoid -> empty .

    FUNCTION        reduce using rule 67 (settypevoid -> empty .)
    ID              reduce using rule 67 (settypevoid -> empty .)


state 31

    (74) type -> STRING settypestring .

    ID              reduce using rule 74 (type -> STRING settypestring .)
    FUNCTION        reduce using rule 74 (type -> STRING settypestring .)


state 32

    (65) settypestring -> empty .

    OR              reduce using rule 65 (settypestring -> empty .)
    AND             reduce using rule 65 (settypestring -> empty .)
    SAME            reduce using rule 65 (settypestring -> empty .)
    DIF             reduce using rule 65 (settypestring -> empty .)
    GE              reduce using rule 65 (settypestring -> empty .)
    LE              reduce using rule 65 (settypestring -> empty .)
    NE              reduce using rule 65 (settypestring -> empty .)
    GT              reduce using rule 65 (settypestring -> empty .)
    LT              reduce using rule 65 (settypestring -> empty .)
    PLUS            reduce using rule 65 (settypestring -> empty .)
    MINUS           reduce using rule 65 (settypestring -> empty .)
    MODULO          reduce using rule 65 (settypestring -> empty .)
    DIVIDE          reduce using rule 65 (settypestring -> empty .)
    TIMES           reduce using rule 65 (settypestring -> empty .)
    POWER           reduce using rule 65 (settypestring -> empty .)
    SEMI            reduce using rule 65 (settypestring -> empty .)
    RPAREN          reduce using rule 65 (settypestring -> empty .)
    RBRACK          reduce using rule 65 (settypestring -> empty .)
    COMMA           reduce using rule 65 (settypestring -> empty .)
    FUNCTION        reduce using rule 65 (settypestring -> empty .)
    ID              reduce using rule 65 (settypestring -> empty .)


state 33

    (2) program -> PROGRAM ID SEMI gotomain var program1 .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMI gotomain var program1 .)


state 34

    (56) var -> VAR type var1 . SEMI var
    (57) var -> VAR type var1 . SEMI

    SEMI            shift and go to state 37


state 35

    (58) var1 -> ID . pushid savevar allocatevar
    (59) var1 -> ID . pushid savevar allocatevar COMMA var1
    (60) var1 -> ID . pushid savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar COMMA var1
    (61) var1 -> ID . pushid savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar
    (111) pushid -> . pushtype
    (110) pushtype -> . empty
    (115) empty -> .

    LBRACK          reduce using rule 115 (empty -> .)
    COMMA           reduce using rule 115 (empty -> .)
    SEMI            reduce using rule 115 (empty -> .)

    pushid                         shift and go to state 40
    empty                          shift and go to state 38
    pushtype                       shift and go to state 39

state 36

    (6) function -> type FUNCTION ID . pushid setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> type FUNCTION ID . pushid setcontext LPAREN RPAREN savefunc block endfunc
    (111) pushid -> . pushtype
    (110) pushtype -> . empty
    (115) empty -> .

    LPAREN          reduce using rule 115 (empty -> .)

    empty                          shift and go to state 38
    pushtype                       shift and go to state 39
    pushid                         shift and go to state 41

state 37

    (56) var -> VAR type var1 SEMI . var
    (57) var -> VAR type var1 SEMI .
    (56) var -> . VAR type var1 SEMI var
    (57) var -> . VAR type var1 SEMI

    BOOLEAN         reduce using rule 57 (var -> VAR type var1 SEMI .)
    INTEGER         reduce using rule 57 (var -> VAR type var1 SEMI .)
    DECIMAL         reduce using rule 57 (var -> VAR type var1 SEMI .)
    STRING          reduce using rule 57 (var -> VAR type var1 SEMI .)
    FRACTION        reduce using rule 57 (var -> VAR type var1 SEMI .)
    VOID            reduce using rule 57 (var -> VAR type var1 SEMI .)
    RBRACE          reduce using rule 57 (var -> VAR type var1 SEMI .)
    IF              reduce using rule 57 (var -> VAR type var1 SEMI .)
    ID              reduce using rule 57 (var -> VAR type var1 SEMI .)
    WHILE           reduce using rule 57 (var -> VAR type var1 SEMI .)
    LPAREN          reduce using rule 57 (var -> VAR type var1 SEMI .)
    DO              reduce using rule 57 (var -> VAR type var1 SEMI .)
    PRINT           reduce using rule 57 (var -> VAR type var1 SEMI .)
    CALL            reduce using rule 57 (var -> VAR type var1 SEMI .)
    RETURN          reduce using rule 57 (var -> VAR type var1 SEMI .)
    INPUT           reduce using rule 57 (var -> VAR type var1 SEMI .)
    VAR             shift and go to state 11

    var                            shift and go to state 42

state 38

    (110) pushtype -> empty .

    LBRACK          reduce using rule 110 (pushtype -> empty .)
    COMMA           reduce using rule 110 (pushtype -> empty .)
    SEMI            reduce using rule 110 (pushtype -> empty .)
    EQUALS          reduce using rule 110 (pushtype -> empty .)
    LPAREN          reduce using rule 110 (pushtype -> empty .)
    OR              reduce using rule 110 (pushtype -> empty .)
    AND             reduce using rule 110 (pushtype -> empty .)
    SAME            reduce using rule 110 (pushtype -> empty .)
    DIF             reduce using rule 110 (pushtype -> empty .)
    GE              reduce using rule 110 (pushtype -> empty .)
    LE              reduce using rule 110 (pushtype -> empty .)
    NE              reduce using rule 110 (pushtype -> empty .)
    GT              reduce using rule 110 (pushtype -> empty .)
    LT              reduce using rule 110 (pushtype -> empty .)
    PLUS            reduce using rule 110 (pushtype -> empty .)
    MINUS           reduce using rule 110 (pushtype -> empty .)
    MODULO          reduce using rule 110 (pushtype -> empty .)
    DIVIDE          reduce using rule 110 (pushtype -> empty .)
    TIMES           reduce using rule 110 (pushtype -> empty .)
    POWER           reduce using rule 110 (pushtype -> empty .)
    RPAREN          reduce using rule 110 (pushtype -> empty .)
    RBRACK          reduce using rule 110 (pushtype -> empty .)


state 39

    (111) pushid -> pushtype .

    LPAREN          reduce using rule 111 (pushid -> pushtype .)
    EQUALS          reduce using rule 111 (pushid -> pushtype .)
    LBRACK          reduce using rule 111 (pushid -> pushtype .)
    COMMA           reduce using rule 111 (pushid -> pushtype .)
    RPAREN          reduce using rule 111 (pushid -> pushtype .)
    SEMI            reduce using rule 111 (pushid -> pushtype .)


state 40

    (58) var1 -> ID pushid . savevar allocatevar
    (59) var1 -> ID pushid . savevar allocatevar COMMA var1
    (60) var1 -> ID pushid . savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar COMMA var1
    (61) var1 -> ID pushid . savevar LBRACK INTEGER_CONS updatesize RBRACK allocatevar
    (68) savevar -> . empty
    (115) empty -> .

    LBRACK          reduce using rule 115 (empty -> .)
    COMMA           reduce using rule 115 (empty -> .)
    SEMI            reduce using rule 115 (empty -> .)

    empty                          shift and go to state 43
    savevar                        shift and go to state 44

state 41

    (6) function -> type FUNCTION ID pushid . setcontext LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> type FUNCTION ID pushid . setcontext LPAREN RPAREN savefunc block endfunc
    (8) setcontext -> . empty
    (115) empty -> .

    LPAREN          reduce using rule 115 (empty -> .)

    setcontext                     shift and go to state 45
    empty                          shift and go to state 46

state 42

    (56) var -> VAR type var1 SEMI var .

    BOOLEAN         reduce using rule 56 (var -> VAR type var1 SEMI var .)
    INTEGER         reduce using rule 56 (var -> VAR type var1 SEMI var .)
    DECIMAL         reduce using rule 56 (var -> VAR type var1 SEMI var .)
    STRING          reduce using rule 56 (var -> VAR type var1 SEMI var .)
    FRACTION        reduce using rule 56 (var -> VAR type var1 SEMI var .)
    VOID            reduce using rule 56 (var -> VAR type var1 SEMI var .)
    RBRACE          reduce using rule 56 (var -> VAR type var1 SEMI var .)
    IF              reduce using rule 56 (var -> VAR type var1 SEMI var .)
    ID              reduce using rule 56 (var -> VAR type var1 SEMI var .)
    WHILE           reduce using rule 56 (var -> VAR type var1 SEMI var .)
    LPAREN          reduce using rule 56 (var -> VAR type var1 SEMI var .)
    DO              reduce using rule 56 (var -> VAR type var1 SEMI var .)
    PRINT           reduce using rule 56 (var -> VAR type var1 SEMI var .)
    CALL            reduce using rule 56 (var -> VAR type var1 SEMI var .)
    RETURN          reduce using rule 56 (var -> VAR type var1 SEMI var .)
    INPUT           reduce using rule 56 (var -> VAR type var1 SEMI var .)


state 43

    (68) savevar -> empty .

    LBRACK          reduce using rule 68 (savevar -> empty .)
    COMMA           reduce using rule 68 (savevar -> empty .)
    SEMI            reduce using rule 68 (savevar -> empty .)


state 44

    (58) var1 -> ID pushid savevar . allocatevar
    (59) var1 -> ID pushid savevar . allocatevar COMMA var1
    (60) var1 -> ID pushid savevar . LBRACK INTEGER_CONS updatesize RBRACK allocatevar COMMA var1
    (61) var1 -> ID pushid savevar . LBRACK INTEGER_CONS updatesize RBRACK allocatevar
    (69) allocatevar -> . empty
    (115) empty -> .

    LBRACK          shift and go to state 48
    COMMA           reduce using rule 115 (empty -> .)
    SEMI            reduce using rule 115 (empty -> .)

    empty                          shift and go to state 47
    allocatevar                    shift and go to state 49

state 45

    (6) function -> type FUNCTION ID pushid setcontext . LPAREN parameter RPAREN savefunc block endfunc
    (7) function -> type FUNCTION ID pushid setcontext . LPAREN RPAREN savefunc block endfunc

    LPAREN          shift and go to state 50


state 46

    (8) setcontext -> empty .

    LPAREN          reduce using rule 8 (setcontext -> empty .)


state 47

    (69) allocatevar -> empty .

    COMMA           reduce using rule 69 (allocatevar -> empty .)
    SEMI            reduce using rule 69 (allocatevar -> empty .)


state 48
